# rust-web-api-template

./: .env  Cargo.toml  README.md  docker-compose.yml  rocket.toml
migrations/2022-05-29-104404_security/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/features/: mod.rs
src/features/security/: jwt.rs  mod.rs  user.rs  user_service.rs
src/features/security/routes/: auth.rs  users.rs
src/features/security/tests/: mod.rs  user_tests.rs
src/features/shared/: api_error.rs  mod.rs
src/routes/: auth.rs  catchers.rs  mod.rs
