[package]
name = "rust-web-api-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
regex = "1.5"
serde = {version="1.0.136", features = ["derive"]}
serde_json = "1.0.79"
jsonwebtoken = "8"
chrono = "0.4.19"